--- a/tools-yosys.yml
+++ b/tools-yosys.yml
@@ -1,24 +1,27 @@
 # Voltus options
 vlsi.core.power_tool: "voltus"
-vlsi.core.power_tool_path: ["/tools/B/nayiri/vlsi/hammer-cadence-plugins/power"]
+vlsi.core.power_tool_path: ["hammer-cadence-plugins/power"]
 vlsi.core.power_tool_path_meta: "append"
 power.voltus.version: "181"
 
 # Tool options. Replace with your tool plugin of choice.
 # Genus options
 # vlsi.core.synthesis_tool: "genus"
-# vlsi.core.synthesis_tool_path: ["/tools/B/nayiri/vlsi/hammer-cadence-plugins/synthesis"] 
+# vlsi.core.synthesis_tool_path: ["hammer-cadence-plugins/synthesis"] 
 # vlsi.core.synthesis_tool_path_meta: "append"
 # synthesis.genus.version: "1813"
 
 # Yosys options
 vlsi.core.synthesis_tool: "yosys"
-vlsi.core.synthesis_tool_path: ["/tools/B/nayiri/openroad/hammer/src/hammer-vlsi/synthesis/"] 
+vlsi.core.synthesis_tool_path: ["hammer/src/hammer-vlsi/synthesis/"] 
 vlsi.core.synthesis_tool_path_meta: "append"
+synthesis.yosys.yosys_bin: "yosys"
+# on BWRC (only on bwrcr720-3 machine):
+# synthesis.yosys.yosys_bin: "/usr/local/bin/yosys"
 
 # Innovus options
 vlsi.core.par_tool: "innovus"
-vlsi.core.par_tool_path: ["/tools/B/nayiri/vlsi/hammer-cadence-plugins/par"]
+vlsi.core.par_tool_path: ["hammer-cadence-plugins/par"]
 vlsi.core.par_tool_path_meta: "append"
 par.innovus.version: "191"
 par.innovus.design_flow_effort: "standard"
@@ -26,7 +29,7 @@ par.inputs.gds_merge: true
 
 # OpenROAD options
 # vlsi.core.par_tool: "openroad"
-# vlsi.core.par_tool_path: ["/tools/B/nayiri/openroad/hammer/src/hammer-vlsi/par"]
+# vlsi.core.par_tool_path: ["hammer/src/hammer-vlsi/par"]
 # vlsi.core.par_tool_path_meta: "append"
 
 # Calibre options
